--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@img-comparison-slider/react": "^8.0.1",
     "chart.js": "^4.4.2",
     "framer-motion": "^11.0.25",
     "react": "^18.2.0",
